2005-01-19  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_in_event):
	* loudmouth/lm-ssl.c: (_lm_ssl_read):
	- Seems GnuTLS returns a huge size as read bytes when the server is
	  disconnected. Check if returned read size is larger than asked for
	  if so, set the connection to be hung up.
	- Fixes bug #164592

2004-11-08  Mikael Hallendal  <micke@imendio.com>

	* examples/lm-change-password.c: Added SSL support
	* examples/lm-register.c: Added SSL support

2004-10-31  Mikael Hallendal  <micke@imendio.com>

	* Release 0.17.2

	* NEWS: Updated for 0.17.2
	* configure.in: Bumped version to 0.17.2

2004-10-30  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-parser.c: (lm_parser_parse):
        - Removed that hack to try to convert to utf8, the stream should be 
          utf8 according to the Jabber specs. This hack caused a lot of weird
          problems.
        - Solves bug #154228

2004-10-22  Mikael Hallendal  <micke@imendio.com>

	reviewed by: <delete if not using a buddy>

	* loudmouth/lm-connection.h:
	* loudmouth/lm-error.h:
	* loudmouth/lm-message-handler.h:
	* loudmouth/lm-message-node.h:
	* loudmouth/lm-message.h:
	* loudmouth/lm-proxy.h:
	* loudmouth/lm-utils.h:
        * loudmouth/lm-ssl.h:
        - G_BEGIN_DECLS and G_END_DECLS
        * loudmouth/loudmouth.h:
        - Include lm-ssl.h

2004-10-08  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_new_message_cb):
	- Fix crash on Solaris when running in verbose mode.

2004-10-05  Mikael Hallendal  <micke@imendio.com>

	* examples/*.c
	* loudmouth/*.[ch]
	- s/Imendio HB/Imendio AB/

2004-10-05  Mikael Hallendal  <micke@imendio.com>

	* docs/reference/loudmouth-sections.txt:
	- Added missing function

2004-09-24  Tim Robbins  <tim@teragen.com.au>

	* loudmouth/lm-connection.c: (connection_do_close):
        - Use g_source_destroy instead of g_source_remove since we might not
          use the default main context.
